Fix on the enlage where it clipped in the content box

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,13 +36,12 @@ body {
     background-color: white;
 }
 
-/* .photoCollection{
+.photoCollection{
+    overflow: scroll;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-} */
+}
 
 .stepImage {
     width: 200px; 
